2020-02-10  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 3.1-SNAPSHOT.

2020-02-07  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 3.0.0.

	* src/main/java/ball/maven/wagon/providers/GSWagon.java:
	Add support to allow setting <credentials/> in
	settings.xml:<server><configuration/></server>.

	* src/main/java/ball/maven/wagon/providers/S3Wagon.java:
	Add support to allow setting <profile/> and/or <region/> in
	settings.xml:<server><configuration/></server>.

2020-02-04  Allen D. Ball  <ball@hcf.dev>

	* Added SLF4J instrumentation.

	* Generated license-maven-plugin:update-file-header headers.

2020-02-03  Allen D. Ball  <ball@hcf.dev>

	* License under Apache License, Version 2.0.

2020-02-01  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/maven/wagon/providers/AbstractWagonProvider.java:
	Support Wagon URLs of the form s3:https://host/path.

2020-01-31  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/maven/wagon/providers/GSWagon.java,
	src/main/java/ball/maven/wagon/providers/S3Wagon.java:
	Implemented getFileList(String).

2020-01-30  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.0.0.

2020-01-25  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/maven/wagon/providers/AbstractWagonProvider.java:
	Initial writing; re-factored GSWagon and S3Wagon.

	* src/main/java/ball/maven/wagon/providers/GSWagon.java,
	src/main/java/ball/maven/wagon/providers/S3Wagon.java:
	Implemented getIfNewer(String,File,long) and
	resourceExists(String) methods.

2020-01-24  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.0.0.

	* src/main/java/ball/maven/wagon/providers/GSWagon.java:
	Re-implemented with com.google.cloud.storage.Storage.

2020-01-23  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/maven/wagon/providers/S3Wagon.java:
	Initial writing.

2017-07-09  Allen D. Ball  <ball@sol.local>

	* Removed dependency on ball:ball-util.

	* src/main/java/ball/maven/wagon/providers/GSWagon.java: