@@ -30,6 +30,7 @@ import java.io.FileInputStream;
 import java.util.List;
 import java.util.TreeSet;
 import java.util.regex.Pattern;
+import javax.inject.Named;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
@@ -42,7 +43,6 @@ import org.apache.maven.wagon.authentication.AuthenticationException;
 import org.apache.maven.wagon.authorization.AuthorizationException;
 import org.apache.maven.wagon.events.TransferEvent;
 import org.apache.maven.wagon.resource.Resource;
-import org.codehaus.plexus.component.annotations.Component;
 
 import static com.google.api.services.storage.StorageScopes.CLOUD_PLATFORM;
 import static com.google.cloud.storage.Storage.BlobListOption;
@@ -57,7 +57,7 @@ import static org.apache.commons.lang3.StringUtils.strip;
  * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
  * @version $Revision$
  */
-@Component(hint = "gs", role = Wagon.class, instantiationStrategy = "per-lookup")
+@Named("gs")
 @NoArgsConstructor @ToString @Slf4j
 public class GSWagon extends AbstractWagonProvider {
     @Getter @Setter private File credentials = null;
