@@ -1,5 +1,7 @@
 2020-02-10  Allen D. Ball  <ball@hcf.dev>
 
+	* Switched to JSR-330 (javax.inject) implementation.
+
 	* pom.xml: Started development of 3.1-SNAPSHOT.
 
 2020-02-07  Allen D. Ball  <ball@hcf.dev>
